Fixed messages with big words causing an overflow which lead to the message itself being too wide.

--- a/style/chat.css
+++ b/style/chat.css
@@ -94,6 +94,7 @@ table#conversations_table {
 	padding:3px;
 	color:#000;
 	text-align:justify;
+	word-break:break-word;
 }
 
 .sent {
